Fix entry title overlapping with icons

--- a/generator_templates/css_files/form.css
+++ b/generator_templates/css_files/form.css
@@ -175,7 +175,7 @@
 
 .ccm-ui .entry-header-title {
     text-align: center;
-    margin: 0 60px 0 60px;
+    margin: 0 95px 0 95px;
     overflow: hidden;
     min-height: 22px;
 }
